config/ingress-pipy/controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-pipy-controller
  namespace: flomesh
  labels:
    app.kubernetes.io/instance: ingress-pipy
    app.kubernetes.io/component: controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ingress-pipy
      app.kubernetes.io/component: controller
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ingress-pipy
        app.kubernetes.io/component: controller
    spec:
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 101
      containers:
      - name: ingress
        image: ingress-pipy:latest
        imagePullPolicy: Always
        args:
        - --v=2
        ports:
        - name: ingress
          containerPort: 8000
        - name: health
          containerPort: 8081
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
#          runAsUser: 101
#          allowPrivilegeEscalation: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
      serviceAccountName: traffic-guru
      terminationGracePeriodSeconds: 60
