config/ingress-pipy/ingress_repo.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  name: pipy
spec:
  controller: flomesh.io/ingress-pipy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-repo
  namespace: flomesh
  annotations:
    "pipy.ingress.kubernetes.io/rewrite-target-from": "^/mesh/?"
    "pipy.ingress.kubernetes.io/rewrite-target-to": "/"
spec:
  ingressClassName: pipy
  rules:
  - http:
      paths:
      - backend:
          service:
            name: repo-service
            port:
              number: 6060
        path: /mesh
        pathType: Prefix
---
